--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.5.5",
     "uuid": "^11.0.3"
   },
