--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-simple-maps": "^3.0.0",
     "tailwind-merge": "^2.5.5",
-    "uuid": "^11.0.3"
+    "topojson-client": "^3.1.0",
+    "uuid": "^11.0.3",
+    "world-atlas": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
