Slideshow done (pre-animations)

--- a/data/projects.json
+++ b/data/projects.json
@@ -1,6 +1,7 @@
 [
   {
     "title": "Array workout",
+    "hoverTitle": "Array workout",
     "description": "A small app designed for JavaScript beginners that want to practice using array methods. Originially designed for a friend, as a way for them to have more fun with their programming studies, as well as a way for me to practice my React skills.",
     "image": "/img/array-workout.png",
     "tech": ["React", "JavaScript", "Tailwind CSS"],
@@ -8,6 +9,15 @@
   },
   {
     "title": "Array workout",
+    "hoverTitle": "Array workout",
+    "description": "A small app designed for JavaScript beginners that want to practice using array methods. Originially designed for a friend, as a way for them to have more fun with their programming studies, as well as a way for me to practice my React skills.",
+    "image": "/img/array-workout2.png",
+    "tech": ["React", "JavaScript", "Tailwind CSS"],
+    "github": "https://github.com/linnkognito/arrays"
+  },
+  {
+    "title": "Array workout",
+    "hoverTitle": "Array workout",
     "description": "A small app designed for JavaScript beginners that want to practice using array methods. Originially designed for a friend, as a way for them to have more fun with their programming studies, as well as a way for me to practice my React skills.",
     "image": "/img/array-workout.png",
     "tech": ["React", "JavaScript", "Tailwind CSS"],
@@ -15,6 +25,15 @@
   },
   {
     "title": "Array workout",
+    "hoverTitle": "Array workout",
+    "description": "A small app designed for JavaScript beginners that want to practice using array methods. Originially designed for a friend, as a way for them to have more fun with their programming studies, as well as a way for me to practice my React skills.",
+    "image": "/img/array-workout2.png",
+    "tech": ["React", "JavaScript", "Tailwind CSS"],
+    "github": "https://github.com/linnkognito/arrays"
+  },
+  {
+    "title": "Array workout",
+    "hoverTitle": "Array workout",
     "description": "A small app designed for JavaScript beginners that want to practice using array methods. Originially designed for a friend, as a way for them to have more fun with their programming studies, as well as a way for me to practice my React skills.",
     "image": "/img/array-workout.png",
     "tech": ["React", "JavaScript", "Tailwind CSS"],
@@ -22,8 +41,25 @@
   },
   {
     "title": "Array workout",
+    "hoverTitle": "Array workout",
+    "description": "A small app designed for JavaScript beginners that want to practice using array methods. Originially designed for a friend, as a way for them to have more fun with their programming studies, as well as a way for me to practice my React skills.",
+    "image": "/img/array-workout2.png",
+    "tech": ["React", "JavaScript", "Tailwind CSS"],
+    "github": "https://github.com/linnkognito/arrays"
+  },
+  {
+    "title": "Array workout",
+    "hoverTitle": "Array workout",
     "description": "A small app designed for JavaScript beginners that want to practice using array methods. Originially designed for a friend, as a way for them to have more fun with their programming studies, as well as a way for me to practice my React skills.",
     "image": "/img/array-workout.png",
+    "tech": ["React", "JavaScript", "Tailwind CSS"],
+    "github": "https://github.com/linnkognito/arrays"
+  },
+  {
+    "title": "Array workout",
+    "hoverTitle": "Array workout",
+    "description": "A small app designed for JavaScript beginners that want to practice using array methods. Originially designed for a friend, as a way for them to have more fun with their programming studies, as well as a way for me to practice my React skills.",
+    "image": "/img/array-workout-last.png",
     "tech": ["React", "JavaScript", "Tailwind CSS"],
     "github": "https://github.com/linnkognito/arrays"
   }
