--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
+    "@react-spring/web": "^9.7.5",
     "d3": "^7.9.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
