--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@react-spring/web": "^9.7.5",
+    "axios": "^1.7.9",
     "d3": "^7.9.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
