--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
     "vite-plugin-eslint": "^1.8.1"
-  }
+  },
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
