--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@react-spring/web": "^9.7.5",
+    "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.9",
     "d3": "^7.9.0",
     "prism-themes": "^1.9.0",
@@ -24,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-simple-maps": "^3.0.0",
+    "react-svg-spinners": "^0.3.1",
     "tailwind-merge": "^2.5.5",
     "topojson-client": "^3.1.0",
     "uuid": "^11.0.3",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tanstack/eslint-plugin-query": "^5.62.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
